# gui_playing_231

./: .gitignore  ADVANCED_SEARCH_INTEGRATION_SUMMARY.md  ADVANCED_SEARCH_VERIFICATION.md  COLUMN_FILTERING_FIX.md  COMPARE_VERSIONS_SUMMARY.md  CONNECTOR_MULTI_SELECT_AND_ACTIONS.md  CONNECTOR_RECENT_SEARCHES_ENHANCEMENTS.md  CONNECTOR_SEARCH_IMPLEMENTATION.md  CONNECTOR_SMART_CLEAR_AND_RECENT_SEARCHES.md  CONTEXT_MENU_AND_E3_LOADING.md  DYNAMIC_FILTER_IMPLEMENTATION.md  E3_LOADING_ENHANCEMENTS.md  GROUP_BY_IMPLEMENTATION.md  Instructions for adding cache docs.md  about.pyw  cables_export.csv  debug_output.txt  dev_launcher.py  document_scanner_config.json  epd_export.csv  launch_config.ini  main.py  run_app.pyw  run_troubleshooting_aide.py  test.py  test_advanced_search_config.py  test_advanced_search_integration.py  test_config.py  test_generate_integration.py  test_param_names.py  test_pip_show_verification.py  test_upgrade_logic.py  test_venv_diagnostic.py  test_version_manager.py  tile_experiment.py  update.pyw  updated_reqs.txt  validate_file_operations.py
productivity_app/: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MACHINE_SETUP.md  MANIFEST.in  QUICK_START.md  README.md  __init__.py  build.py  comprehensive_import_fix.py  demo_components_phase1_2.py  dev_gui.py  final_import_fix.py  fix_imports.py  fix_remaining_imports.py  package_builder.py  pyproject.toml  requirements-dev.txt  run.py  scratch.py  setup.py  test_import.py  theme_test.py
productivity_app/app/: __init__.py
productivity_app/app/connector/: connector_model.py
productivity_app/app/core/: base_model.py
productivity_app/app/document_scanner/: document_scanner_model.py  search_result.py  searchable_document.py
productivity_app/app/models/: epd_model.py
productivity_app/app/presenters/: epd_presenter.py
productivity_app/app/remote_docs/: __init__.py
productivity_app/app/views/: connectors_view.py  main_window.py
productivity_app/bootstrapper/: bootstrap.py
productivity_app/docs/: ARCHITECTURE_IMAGES.txt  AZURE_DEVOPS_INTEGRATION.md  COMPARE_VERSIONS_QUICK_START.md  COMPONENT_LIBRARY_SUMMARY.md  COMPONENT_QUICK_REF.md  CONNECTOR_MODEL.md  CONTEXT_CALLBACKS_API.md  CONTEXT_DISPLAY_WITH_IMAGES.md  CONTEXT_IMAGES_SUMMARY.md  DIALOG_UPDATES_v2.md  FILTER_IMPLEMENTATION_SUMMARY.md  HISTORY_AND_CONTEXT_FIXES.md  HISTORY_BUG_FIX.md  INDEX.md  LAZY_LOADING_GUIDE.md  QUICK_START_IMAGES.md  SEARCH_CONTEXT_COMPONENT_UPDATE.md  THEME_MANAGEMENT_SOLUTION.md
productivity_app/examples/: gui_input_rationalization.py
productivity_app/productivity_app/: __init__.py  example.py  main.py  report_decorator_design.py
productivity_app/productivity_app/alt_data_pipeline/: scratch.py
productivity_app/productivity_app/data_pipeline/: PARAMETERS.md  TYPE_HINTS_GUIDE.md  __init__.py  loader.py  pipeline_graph.py  registry.py  types_enum.py  upgrade_idea.md
productivity_app/productivity_app/productivity_core/: __init__.py
productivity_app/scratch/: .pyirc
productivity_app/tests/: __init__.py  conftest.py  test_automated_reports_tab.py
productivity_app/tests/automated_reports/: README.md  __init__.py  test_filter_state.py  test_integration_with_pipeline.py  test_model.py
productivity_app/tests/connector/: __init__.py  test_filter_engine.py  test_filter_redux.py
productivity_app/tests/data_pipeline/: ARCHITECTURE_SUMMARY.md  CORRECTED_USAGE.md  QUICK_START.md  SIMPLE_GUIDE.md  test_central_registry.py  test_choice_parameter.py  test_compare_csvs_integration.py  test_compare_two_csvs.py  test_csv_collector_registration.py  test_end_to_end.py  test_excel_to_parts_list_collector.py  test_excel_to_parts_list_registration.py  test_parameter_hierarchy.py  test_parameter_registration.py  test_parameter_registry.py  test_partslist_schema.py  test_partslist_to_part.py  test_report_can_generate.py  test_report_generation_requiring_collectors.py  test_report_introspection.py  test_schema_validation.py  test_transformation_graph.py
swiss_army_tool/: BUILD.md  CONFIG_MIGRATION.md  CONNECTOR_CONTEXT_IMPLEMENTATION.md  DEBUG_SEARCH_LOGGING.md  DOCUMENT_SCANNER_IMPLEMENTATION.md  INSTALL.md  LIBRARY_CONVERSION.md  MANIFEST.in  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SIMPLE_SEARCH_HISTORY.md  main.py  migrate_config.py  pyproject.toml  requirements.txt  setup.py  test_label_styles.py  test_multiple_contexts.py  test_tab_visibility.py  test_threaded_context.py
swiss_army_tool/app/: __init__.py
swiss_army_tool/app/connector/: connector_context_provider.py  connector_model.py  connector_presenter.py  connector_tab.py
swiss_army_tool/app/core/: app_context.py  base_model.py  base_presenter.py  base_view.py  config.py  config_manager.py
swiss_army_tool/app/devops/: devops_presenter.py
swiss_army_tool/app/document_scanner/: __init__.py  context_provider.py  (+6 more)
swiss_army_tool/docs/: COLLAPSIBLE_RESULTS_AND_CONTEXT.md  COMPARE_VERSIONS.md  COMPARE_VERSIONS_ARCHITECTURE.md  COMPARE_VERSIONS_IMPLEMENTATION.md  COMPONENT_LIBRARY.md  DOCUMENT_SCANNER_COMPLETE.md  EXPANDABLE_STEPS_DIALOG.md  FEATURE_FLAGS_GUIDE.md  INDEX.md  INTERACTIVE_CONTEXT_IMPLEMENTATION.md  MIGRATION_CHECKLIST.md  MODEL_UPDATE_CHECKLIST.md  NO_CACHING.md  RELOAD_DOCUMENTS_FEATURE.md  SIMPLIFIED_ADD_DOCUMENT.md  TAB_ARCHITECTURE_GUIDE.md  TAB_VISIBILITY_IMPLEMENTATION_PLAN.md
swiss_army_tool/e3_caches/: e3_connector_cache_2024-01-15.csv
(+474 files in other folders)
